[workspace]
# Any crate in the Garnet tree must be listed as a member of this
# workspace.
members =  [
  "bin/bluetooth_tools/bthci_fake_util",
  "bin/bluetooth_tools/btsnoop",
  "bin/device_settings",
  "bin/log_listener",
  "bin/logger",
  "bin/wlancfg",
  "bin/wlanstack",
  "bin/wlantool",
  "bin/xi_core",
  "drivers/wlan/testing/util",
  "bin/bluetooth_tests/integration",
  "examples/bluetooth/ble_battery_service",
  "examples/fidl/*rust",
  "examples/network/wget-rs",
  "examples/rust/testing",
  "lib/rust/crates/eapol",
  "lib/rust/crates/fuchsia-bluetooth",
  "lib/rust/crates/fuchsia-wlan-dev",
  "lib/rust/crates/wlan-rsn",
  "lib/rust/crates/wlan-sme",
  "lib/rust/fidl_crates/fidl_wlan_device",
  "lib/rust/fidl_crates/fidl_wlan_device_service",
  "public/lib/fidl/rust/fidl",
  "public/rust/crates/fuchsia-ddk",
  "public/rust/crates/fuchsia-ddk/examples/ddk_toy",
  "public/rust/crates/fuchsia-ddk/examples/microorb",
  "public/rust/crates/fdio",
  "public/rust/crates/fuchsia-app",
  "public/rust/crates/fuchsia-async",
  "public/rust/crates/fuchsia-syslog",
  "public/rust/crates/fuchsia-vfs",
  "public/rust/crates/fuchsia-vfs/fuchsia-vfs-watcher",
  "public/rust/crates/fuchsia-zircon",
  "public/rust/crates/fuchsia-zircon/fuchsia-zircon-sys",
  "public/rust/crates/mxruntime",
  "public/rust/crates/mxruntime/mxruntime-sys",
  "public/rust/fidl_crates/fidl_bluetooth",
  "public/rust/fidl_crates/fidl_bluetooth_control",
  "public/rust/fidl_crates/fidl_bluetooth_gatt",
  "public/rust/fidl_crates/fidl_bluetooth_low_energy",
  "public/rust/fidl_crates/fidl_component",
  "public/rust/fidl_crates/fidl_device_settings",
  "public/rust/fidl_crates/fidl_echo2",
  "public/rust/fidl_crates/fidl_mem",
  "public/rust/fidl_crates/fidl_geometry",
  "public/rust/fidl_crates/fidl_gfx",
  "public/rust/fidl_crates/fidl_images",
  "public/rust/fidl_crates/fidl_input",
  "public/rust/fidl_crates/fidl_logger",
  "public/rust/fidl_crates/fidl_media",
  "public/rust/fidl_crates/fidl_netstack",
  "public/rust/fidl_crates/fidl_network",
  "public/rust/fidl_crates/fidl_power_manager",
  "public/rust/fidl_crates/fidl_scenic_dummy_system",
  "public/rust/fidl_crates/fidl_ui",
  "public/rust/fidl_crates/fidl_views",
  "public/rust/fidl_crates/fidl_views_v1",
  "public/rust/fidl_crates/fidl_views_v1_token",
  "public/rust/fidl_crates/fidl_xi",
]

# Any crate in the Fuchsia tree that is a dependency of a member of this
# workspace must have a patch statement here and the version of the crate
# at the path specified must be compatible with all crates in the tree.
[patch.crates-io]
fidl_bluetooth = { path = "public/rust/fidl_crates/fidl_bluetooth" }
fidl_bluetooth_control = { path = "public/rust/fidl_crates/fidl_bluetooth_control" }
fidl_bluetooth_gatt = { path = "public/rust/fidl_crates/fidl_bluetooth_gatt" }
fidl_bluetooth_low_energy = { path = "public/rust/fidl_crates/fidl_bluetooth_low_energy" }
fidl_component = { path = "public/rust/fidl_crates/fidl_component" }
fidl_device_settings = { path = "public/rust/fidl_crates/fidl_device_settings" }
fidl_echo2 = { path = "public/rust/fidl_crates/fidl_echo2" }
fidl_mem = { path = "public/rust/fidl_crates/fidl_mem" }
fidl_geometry = { path = "public/rust/fidl_crates/fidl_geometry" }
fidl_gfx = { path = "public/rust/fidl_crates/fidl_gfx" }
fidl_images = { path = "public/rust/fidl_crates/fidl_images" }
fidl_input = { path = "public/rust/fidl_crates/fidl_input" }
fidl_logger = { path = "public/rust/fidl_crates/fidl_logger" }
fidl_media = { path = "public/rust/fidl_crates/fidl_media" }
fidl_netstack = { path = "public/rust/fidl_crates/fidl_netstack" }
fidl_network = { path = "public/rust/fidl_crates/fidl_network" }
fidl_power_manager = { path = "public/rust/fidl_crates/fidl_power_manager" }
fidl_scenic_dummy_system = { path = "public/rust/fidl_crates/fidl_scenic_dummy_system" }
fidl_ui = { path = "public/rust/fidl_crates/fidl_ui" }
fidl_views = { path = "public/rust/fidl_crates/fidl_views" }
fidl_views_v1 = { path = "public/rust/fidl_crates/fidl_views_v1" }
fidl_views_v1_token = { path = "public/rust/fidl_crates/fidl_views_v1_token" }
fidl_wlan_device = { path = "lib/rust/fidl_crates/fidl_wlan_device" }
fidl_wlan_device_service = { path = "lib/rust/fidl_crates/fidl_wlan_device_service" }
fidl_xi = { path = "public/rust/fidl_crates/fidl_xi" }
fuchsia-ddk = { path = "public/rust/crates/fuchsia-ddk" }
eapol = { path = "lib/rust/crates/eapol" }
fdio = { path = "public/rust/crates/fdio" }
fidl = { path = "public/lib/fidl/rust/fidl" }
fuchsia-app = { path = "public/rust/crates/fuchsia-app" }
fuchsia-syslog = { path = "public/rust/crates/fuchsia-syslog" }
fuchsia-async = { path = "public/rust/crates/fuchsia-async" }
fuchsia-bluetooth = { path = "lib/rust/crates/fuchsia-bluetooth" }
fuchsia-vfs-watcher = { path = "public/rust/crates/fuchsia-vfs/fuchsia-vfs-watcher" }
fuchsia-wlan-dev = { path = "lib/rust/crates/fuchsia-wlan-dev" }
fuchsia-zircon = { path = "public/rust/crates/fuchsia-zircon" }
fuchsia-zircon-sys = { path = "public/rust/crates/fuchsia-zircon/fuchsia-zircon-sys" }
mio = { path = "../third_party/rust-mirrors/mio" }
mxruntime = { path = "public/rust/crates/mxruntime" }
mxruntime-sys = { path = "public/rust/crates/mxruntime/mxruntime-sys" }
rand = { path = "../third_party/rust-mirrors/rand" }
tokio-core = { path = "../third_party/rust-mirrors/tokio-core" }
wlan-rsn = { path = "lib/rust/crates/wlan-rsn" }
wlan-sme = { path = "lib/rust/crates/wlan-sme" }
xi-core-lib = { path = "../third_party/rust-mirrors/xi-editor/rust/core-lib" }
xi-rope = { path = "../third_party/rust-mirrors/xi-editor/rust/rope" }
xi-rpc = { path = "../third_party/rust-mirrors/xi-editor/rust/rpc" }
xi-trace = { path = "../third_party/rust-mirrors/xi-editor/rust/trace" }
xi-trace-dump = { path = "../third_party/rust-mirrors/xi-editor/rust/trace-dump" }
xi-unicode = { path = "../third_party/rust-mirrors/xi-editor/rust/unicode" }
