[workspace]
# Any crate in the Garnet tree must be listed as a member of this
# workspace.
members =  [
  "bin/xi_core",
  "examples/rust/testing",
  "lib/rust/crates/wlan-sme",
  "public/lib/fidl/rust/fidl",
  "public/rust/crates/fuchsia-ddk",
  "public/rust/crates/fuchsia-ddk/examples/ddk_toy",
  "public/rust/crates/fuchsia-ddk/examples/microorb",
  "public/rust/crates/fdio",
  "public/rust/crates/fuchsia-app",
  "public/rust/crates/fuchsia-archive",
  "public/rust/crates/fuchsia-async",
  "public/rust/crates/fuchsia-syslog",
  "public/rust/crates/fuchsia-vfs",
  "public/rust/crates/fuchsia-vfs/fuchsia-vfs-watcher",
  "public/rust/crates/fuchsia-zircon",
  "public/rust/crates/fuchsia-zircon/fuchsia-zircon-sys",
  "public/rust/crates/mxruntime",
  "public/rust/crates/mxruntime/mxruntime-sys",
  "public/rust/fidl_crates/fidl_component",
  "public/rust/fidl_crates/fidl_mem",
  "public/rust/fidl_crates/fidl_power_manager",
  "public/rust/fidl_crates/fidl_xi",
]

# Any crate in the Fuchsia tree that is a dependency of a member of this
# workspace must have a patch statement here and the version of the crate
# at the path specified must be compatible with all crates in the tree.
[patch.crates-io]
fidl_component = { path = "public/rust/fidl_crates/fidl_component" }
fidl_mem = { path = "public/rust/fidl_crates/fidl_mem" }
fidl_power_manager = { path = "public/rust/fidl_crates/fidl_power_manager" }
fidl_xi = { path = "public/rust/fidl_crates/fidl_xi" }
fuchsia-ddk = { path = "public/rust/crates/fuchsia-ddk" }
fdio = { path = "public/rust/crates/fdio" }
fidl = { path = "public/lib/fidl/rust/fidl" }
fuchsia-app = { path = "public/rust/crates/fuchsia-app" }
fuchsia-syslog = { path = "public/rust/crates/fuchsia-syslog" }
fuchsia-async = { path = "public/rust/crates/fuchsia-async" }
fuchsia-vfs-watcher = { path = "public/rust/crates/fuchsia-vfs/fuchsia-vfs-watcher" }
fuchsia-zircon = { path = "public/rust/crates/fuchsia-zircon" }
fuchsia-zircon-sys = { path = "public/rust/crates/fuchsia-zircon/fuchsia-zircon-sys" }
mio = { path = "../third_party/rust-mirrors/mio" }
mxruntime = { path = "public/rust/crates/mxruntime" }
mxruntime-sys = { path = "public/rust/crates/mxruntime/mxruntime-sys" }
rand = { path = "../third_party/rust-mirrors/rand" }
wlan-sme = { path = "lib/rust/crates/wlan-sme" }
xi-core-lib = { path = "../third_party/rust-mirrors/xi-editor/rust/core-lib" }
xi-rope = { path = "../third_party/rust-mirrors/xi-editor/rust/rope" }
xi-rpc = { path = "../third_party/rust-mirrors/xi-editor/rust/rpc" }
xi-trace = { path = "../third_party/rust-mirrors/xi-editor/rust/trace" }
xi-trace-dump = { path = "../third_party/rust-mirrors/xi-editor/rust/trace-dump" }
xi-unicode = { path = "../third_party/rust-mirrors/xi-editor/rust/unicode" }
